syntax = "proto3";
package products;
option go_package = "./products";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

enum ServiceName { PingProducts = 0; }

service ProductsService {
  rpc PingProducts(google.protobuf.Empty) returns (GrpcResponse) {}
}

message GrpcResponse {
  int32 stat_code = 1;
  string stat_message = 2;
  optional google.protobuf.Any data = 3;
}